--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
     rabbitmq:
         image: 'rabbitmq:3-management'
-        hostname: 'sh_rabbitmq'
+        hostname: 'rabbitmq'
         # expose:
         #   - '5672'
         ports:
